# chorographer

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pipeline-schedule.yml
docs/: application-layer.md  architecture.md  component-config-logging.md  component-osm.md  component-postgres.md  domain-entities.md  domain-enums.md  domain-layer.md  domain-value-objects.md  infrastructure-layer.md
src/: __init__.py  enrich.py  main.py
src/application/: __init__.py
src/application/ports/: __init__.py  extractor.py  repository.py
src/application/services/: __init__.py  async_pipeline.py
src/application/use_cases/: __init__.py  compute_zone_hierarchy.py  run_pipeline.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  poi.py  road.py  segment.py  zone.py
src/domain/enums/: __init__.py  poi.py  road.py
src/domain/exceptions/: __init__.py  base.py
src/domain/services/: __init__.py  segmenter.py
src/domain/value_objects/: __init__.py  address.py  coordinates.py  operating_hours.py  penalty.py
src/infrastructure/: __init__.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/logging/: __init__.py  setup.py
src/infrastructure/osm/: __init__.py  extractor.py  handlers.py  reader.py  transformers.py  types.py
src/infrastructure/postgres/: __init__.py  connection.py  writer.py  zone_hierarchy.py
src/infrastructure/postgres/migrations/: alembic.ini  env.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
(+7 files in other folders)
